--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-
+        <h1>Games list</h1>
     </div>
     <script src="question-2.js"></script>
 </body>
