--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="loading"></div>
     </div>
     <script src="question-2.js"></script>
 </body>
